# agent-wheather

./: README.md  pyproject.toml
agents/weather/: azure.yaml
agents/weather/src/temperature/: .env.example  Dockerfile  main.py  pyproject.toml
