[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.11.0",
    "agent-framework-foundry-hosting>=1.0.0a260709",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.9",
    "python-dotenv>=1.2.2",
]
